Make sure the datepicker has a higher z-index than the editor in WP 4.0.

--- a/admin/css/less/modules/gigs.less
+++ b/admin/css/less/modules/gigs.less
@@ -3,7 +3,9 @@
 
 #gig-fields {
 	max-width: 700px;
+	position: relative;
 	width: 100%;
+	z-index: 1001; // Position higher than the editor.
 
 	select {
 		height: 30px;
